--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.6",
-    "popper.js": "^1.14.5"
+    "popper.js": "^1.14.5",
+    "swagger-ui-express": "^4.0.1",
+    "yamljs": "^0.3.0"
   }
 }
