--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # App
-PORT=3010
+PORT=3012
 
 # MySQL
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
+DB_PORT=3307
+DB_USER=suporte
 DB_PASS=Suporte99
 DB_NAME=db_tarefas
